apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__policy__tests__union.snap
---
source: apollo-router/src/plugins/authorization/policy.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_policies: &extracted_policies,\n    successful_policies: [\"a\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            test
            uni {
                ... on A {
                    id
                }
                ... on B {
                    id
                }
            }
        }
        
extracted_policies: {"a", "b"}
successful policies: ["a"]
filtered:
query {
  test
  uni {
    ... on A {
      id
    }
  }
}

paths: ["/uni/... on B"]
